@@ -10,9 +10,18 @@
 
 static const char* FILE_NAME = "Net/SSLeay/OCSP_BASICRESP.c";
 
-int32_t SPVM__Net__SSLeay__OCSP_BASICRESP__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPVM__Net__SSLeay__OCSP_BASICRESP__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  OCSP_BASICRESP* ocsp_basicresp = env->get_pointer(env, stack, obj_self);
+  
+  if (!env->no_free(env, stack, obj_self)) {
+    OCSP_BASICRESP_free(ocsp_basicresp);
+  }
   
   return 0;
 }
-
 
